Remove unnecessary dependencies.